--- a/BSA2018-Hometask2/BSA2018_Hometask2.csproj
+++ b/BSA2018-Hometask2/BSA2018_Hometask2.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Todo\" />
     <Folder Include="Views\Selection\" />
   </ItemGroup>
 
